trailer text or something ;)

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-Something experimental.
-Does github regonize me?
-Still unknown. How about now?
+Did you master the dungeon when chaos stroke back?
+Did you purge the eye of the beholder and survived the black crypt.
+
+Then... don't go into the cellar.
+
+
+It's just another way to die...
