--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Did you master the dungeon when chaos stroke back?
-Did you tear the eye of the beholder and survived the black crypt.
+Did you tear the eye of the beholder and survive the black crypt.
 
 Then... don't go into the cellar.
 
