--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Did you master the dungeon when chaos stroke back?
 Did you tear the eye of the beholder and survive the black crypt.
 
-Then... don't go into the cellar.
+Even if you did - don't go into the cellar.
 
 
 It's just another way to die...
